--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "team9",
+  "name": "03week",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "nanoid": "^4.0.0",
     "react": "^18.2.0",
-    "react-app": "^1.1.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
