--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-id-generator": "^3.0.2",
     "react-magic-slider-dots": "^1.2.2",
     "react-redux": "^8.0.2",
@@ -25,7 +26,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "node server",
+    "start": "react-scripts start",
     "start:dev": "cross-env NODE_PATH=src react-scripts start",
     "build": "cross-env NODE_PATH=src react-scripts build",
     "test": "react-scripts test --env=jsdom",
